kubernetes/fabric/base/api.sidecar.configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: api-sidecar
  namespace: fabric
data:
  config.yaml: |-
    node:
      id: "default"
      cluster: "fabric.api"
    static_resources:
      listeners:
        - name: ingress
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8443
          filter_chains:
            - filters:
              - name: envoy.http_connection_manager
                config:
                  idle_timeout: 1s
                  forward_client_cert_details: sanitize_set
                  set_current_client_cert_details:
                      uri: true
                  codec_type: AUTO
                  access_log:
                    - name: envoy.file_access_log
                      config:
                        path: "/dev/stdout"
                  stat_prefix: ingress
                  route_config:
                    name: local
                    virtual_hosts:
                      - name: local
                        domains: ["*"]
                        routes:
                          - match:
                              prefix: "/"
                            route:
                              cluster: local
                  http_filters:
                    - name: gm.metrics
                      typed_config:
                        "@type": type.googleapis.com/deciphernow.gm_proxy.filters.MetricsConfig
                        metrics_port: 8080
                        metrics_host: 0.0.0.0
                        metrics_dashboard_uri_path: /metrics
                        metrics_prometheus_uri_path: /prometheus
                        prometheus_system_metrics_interval_seconds: 15
                        metrics_ring_buffer_size: 4096
                        metrics_key_function: depth
                        metrics_key_depth: "2"
                    - name: envoy.router
              tls_context:
                common_tls_context:
                  tls_certificate_sds_secret_configs:
                    - name: "spiffe://quickstart.greymatter.io/ns/fabric/sa/api"
                      sds_config:
                        api_config_source:
                          api_type: GRPC
                          grpc_services:
                            envoy_grpc:
                              cluster_name: spire
                  tls_params:
                    ecdh_curves:
                      - X25519:P-256:P-521:P-384
      clusters:
        - name: local
          connect_timeout: 0.25s
          type: STATIC
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: local
            endpoints:
              - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: 127.0.0.1
                        port_value: 10080 
        - name: spire
          connect_timeout: 0.25s
          http2_protocol_options: {}
          type: STATIC
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: spire
            endpoints:
              - lb_endpoints:
                - endpoint:
                    address:
                      pipe:
                        path: /run/spire/socket/agent.sock
    admin:
      access_log_path: /dev/stdout
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 8001
