kubernetes/fabric/base/control.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: control
    cluster: fabric.control
  name: control
  namespace: fabric
spec:
  ports:
    - port: 8443
      protocol: TCP
      targetPort: sidecar
  selector:
    app: control
    cluster: fabric.control
  type: ClusterIP
