kubernetes/fabric/base/control.sidecar.configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: control-sidecar
  namespace: fabric
data:
  config.yaml: |-
    node:
      id: "default"
      cluster: "fabric.control"
    static_resources:
      listeners:
        - name: egress
          address:
            socket_address:
              address: 127.0.0.1
              port_value: 9080
          filter_chains:
            - filters:
              - name: envoy.http_connection_manager
                config:
                  idle_timeout: 1s
                  forward_client_cert_details: sanitize_set
                  set_current_client_cert_details:
                      uri: true
                  codec_type: auto
                  access_log:
                    - name: envoy.file_access_log
                      config:
                        path: "/dev/stdout"
                  stat_prefix: egress
                  route_config:
                    name: api
                    virtual_hosts:
                      - name: local
                        domains:
                          - "*"
                        routes:
                          - match:
                              prefix: "/"
                            route:
                              cluster: api
                  http_filters:
                    - name: envoy.router
        - name: ingress
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8443
          filter_chains:
            - filters:
              - name: envoy.http_connection_manager
                config:
                  idle_timeout: 1s
                  forward_client_cert_details: sanitize_set
                  set_current_client_cert_details:
                      uri: true
                  codec_type: auto
                  access_log:
                    - name: envoy.file_access_log
                      config:
                        path: "/dev/stdout"
                  stat_prefix: ingress
                  route_config:
                    name: local
                    virtual_hosts:
                      - name: local
                        domains:
                          - "*"
                        routes:
                          - match:
                              prefix: "/"
                            route:
                              cluster: local
                  http_filters:
                    - name: envoy.router
              tls_context:
                common_tls_context:
                  tls_certificate_sds_secret_configs:
                    - name: "spiffe://quickstart.greymatter.io/ns/fabric/sa/control"
                      sds_config:
                        api_config_source:
                          api_type: GRPC
                          grpc_services:
                            envoy_grpc:
                              cluster_name: spire
                  tls_params:
                    ecdh_curves:
                      - X25519:P-256:P-521:P-384
                  validation_context_sds_secret_config:
                    name: "spiffe://quickstart.greymatter.io"
                    sds_config:
                      api_config_source:
                        api_type: GRPC
                        grpc_services:
                          envoy_grpc:
                            cluster_name: spire
      clusters:
        - name: api
          connect_timeout: 0.25s
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: api
            endpoints:
              - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: api.fabric.svc.cluster.local
                        port_value: 8443
          tls_context:
            common_tls_context:
              tls_certificate_sds_secret_configs:
                - name: "spiffe://quickstart.greymatter.io/ns/fabric/sa/control"
                  sds_config:
                    api_config_source:
                      api_type: GRPC
                      grpc_services:
                        envoy_grpc:
                          cluster_name: spire
              tls_params:
                ecdh_curves:
                  - X25519:P-256:P-521:P-384
              validation_context_sds_secret_config:
                name: "spiffe://quickstart.greymatter.io"
                sds_config:
                  api_config_source:
                    api_type: GRPC
                    grpc_services:
                      envoy_grpc:
                        cluster_name: spire
        - name: local
          connect_timeout: 0.25s
          http2_protocol_options: {}
          type: STATIC
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: local
            endpoints:
              - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: 127.0.0.1
                        port_value: 10080
        - name: spire
          connect_timeout: 0.25s
          http2_protocol_options: {}
          type: STATIC
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: spire
            endpoints:
              - lb_endpoints:
                - endpoint:
                    address:
                      pipe:
                        path: /run/spire/socket/agent.sock
    admin:
      access_log_path: /dev/stdout
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 8001
